tests/snapshots/oracle_trace_v1__cargo_run_test_stripped.snap
---
source: tests/oracle_trace_v1.rs
expression: normalised
---

Trace

                                command │ cargo run -- test
  95: (rule (command "cargo")           │
        (args (or (when (exact)         │
                    (effect :allow))    │ → :allow
                  (positional           │
                   (? "affected")       │
                   (? (or "watch" "run" │
                                  "r")) │
                   (? "--")             │
                   (cond                │
                     ((or "install"     │
                          "uninstall")  │
                      (effect :deny))   │
                     ((or "build"       │
                          "b"           │
                          …             │
                          "clippy")     │
                      (effect :allow))) │ → :allow
                   (effect :allow)))))  │

Result

  cargo run -- test

  → :allow

  config: <config-path>
