tests/snapshots/oracle_trace_v1__cat_file_raw.snap
---
source: tests/oracle_trace_v1.rs
expression: normalised
---

[1mTrace[0m

                                 [2mcommand[0m [2m│[0m [1mcat foo[0m
  [2m90: [0m[2m([0m[34mrule[0m [2m([0m[34mcommand[0m [2m([0mor [32m"cat"[0m [2m…[0m[2m)[0m[2m)[0m       [2m│[0m
            [2m([0m[34meffect[0m [38;2;120;120;255m:allow[0m               [2m│[0m [2m[0m[2m→[0m [1;32m:allow[0m [32m"Read-only access"[0m
                    [32m"Read-only access"[0m[2m)[0m[2m)[0m [2m│[0m

[1mResult[0m

  [4;32mcat foo[0m

  [2m→[0m [1;32m:allow[0m [32m"Read-only access"[0m

  config: <config-path>
