tests/snapshots/oracle_trace_v1__cat_file_stripped.snap
---
source: tests/oracle_trace_v1.rs
assertion_line: 108
expression: normalised
---

Trace

                                  command │ cat foo
  90: (rule (command (or "cat" …))        │
            (effect                       │ → :allow "Read-only access"
              :allow "Read-only access")) │

Result

  cat foo

  → :allow "Read-only access"

  config: <config-path>
