tests/snapshots/oracle_trace_v1__curl_get_raw.snap
---
source: tests/oracle_trace_v1.rs
expression: normalised
---

[1mTrace[0m

  [2mconvention:[0m :gnu [2m│[0m

                                            [2mcommand[0m [2m│[0m [1mcurl https://example.com[0m
  [2m65: [0m[2m([0m[34mrule[0m [2m([0m[34mcommand[0m [32m"curl"[0m[2m)[0m                        [2m│[0m
        [2m([0mcontext                                    [2m│[0m
         [2m([0mnot [2m([0m[34manywhere[0m [32m"-d"[0m [32m"--data"[0m …             [2m│[0m
                        [32m"--request"[0m[2m)[0m[2m)[0m[2m)[0m              [2m│[0m
        [2m([0m[34meffect[0m                                     [2m│[0m [2m[0m[2m→[0m [1;32m:allow[0m [32m"GET request (no mutating flags)"[0m
         [94m:allow[0m [32m"GET request (no mutating flags)"[0m[2m)[0m[2m)[0m [2m│[0m

[1mResult[0m

  [4;32mcurl https://example.com[0m

  [2m→[0m [1;32m:allow[0m [32m"GET request (no mutating flags)"[0m

  config: <config-path>
