tests/snapshots/oracle_trace_v1__curl_get_stripped.snap
---
source: tests/oracle_trace_v1.rs
expression: normalised
---

Trace

  convention: :gnu │

                                            command │ curl https://example.com
  65: (rule (command "curl")                        │
        (context (and (not (flag "d"))              │
                      (not (flag "data"))           │
                      (not (flag "X"))              │
                      (not (flag                    │
                            "request"))))           │
        (effect                                     │ → :allow "GET request (no mutating flags)"
         :allow "GET request (no mutating flags)")) │

Result

  curl https://example.com

  → :allow "GET request (no mutating flags)"

  config: <config-path>
