tests/snapshots/oracle_trace_v1__curl_post_stripped.snap
---
source: tests/oracle_trace_v1.rs
expression: normalised
---

Trace

                                              command │ curl -d data https://example.com
  65: (rule (command "curl")                          │
        (args (and (not (anywhere "-d"))              │ "-d" ∈ {"-d", "data", "https://example.com"} → yes
                   …)))                               │
                                                      │
  69: (rule (command "curl")                          │
        (effect                                       │ → :ask "Network operation requires approval"
         :ask "Network operation requires approval")) │

Result

  curl -d data https://example.com

  → :ask "Network operation requires approval"

  config: <config-path>
