tests/snapshots/oracle_trace_v1__git_checkout_file_plan_raw.snap
---
source: tests/oracle_trace_v1.rs
expression: normalised
---

[1mTrace[0m

                                                                      [2mcommand[0m [2m│[0m [1mgit checkout -- main.ts[0m
                                                                        [2mfacts[0m [2m│[0m [38;2;120;120;255m:opencode/agent[0m [32m"plan"[0m
  [2m43: [0m[2m([0m[34mrule[0m [2m([0m[34mcommand[0m [32m"git"[0m[2m)[0m                                                   [2m│[0m
        [2m([0mcontext [2m([0mand [2m([0m[34mpositional[0m                                             [2m│[0m
                       [32m"reset"[0m[2m)[0m                                               [2m│[0m [2m"checkout" = "reset" [0m[2m→[0m [33mno[0m
                      [2m…[0m[2m)[0m[2m)[0m                                                     [2m│[0m
        [2m([0m[2meffect[0m                                                               [2m│[0m [2m[0m[2m→[0m [1;33m:ask[0m [32m"Dangerous git reset"[0m
         [2m:ask[0m [2m"Dangerous git reset"[0m[2m)[0m[2m)[0m                                         [2m│[0m
                                                                              [2m│[0m
  [2m47: [0m[2m([0m[34mrule[0m [2m([0m[34mcommand[0m [32m"git"[0m[2m)[0m                                                   [2m│[0m
        [2m([0mcontext [2m([0mor [2m([0m[34mpositional[0m                                              [2m│[0m
                      [32m"remote"[0m[2m)[0m                                               [2m│[0m [2m"checkout" = "remote" [0m[2m→[0m [33mno[0m
                     [2m([0m[34mpositional[0m                                              [2m│[0m
                      [2m([0mor [32m"clean"[0m [32m"gc"[0m                                        [2m│[0m [2m"checkout" = "clean" [0m[2m→[0m [33mno[0m
                          [32m"push"[0m[2m)[0m[2m)[0m[2m)[0m[2m)[0m                                          [2m│[0m [2m"checkout" = "push" [0m[2m→[0m [33mno[0m
        [2m([0m[2meffect[0m                                                               [2m│[0m [2m[0m[2m→[0m [1;33m:ask[0m [32m"Dangerous git operation"[0m
         [2m:ask[0m [2m"Dangerous git operation"[0m[2m)[0m[2m)[0m                                     [2m│[0m
                                                                              [2m│[0m
  [2m52: [0m[2m([0m[34mrule[0m [2m([0m[34mcommand[0m [32m"git"[0m[2m)[0m                                                   [2m│[0m
        [2m([0m[34margs[0m                                                                 [2m│[0m
         [2m([0mand                                                                 [2m│[0m
          [2m([0mor [2m([0m[34mpositional[0m [2m([0mor [32m"switch"[0m                                        [2m│[0m [2m"checkout" = "switch" [0m[2m→[0m [33mno[0m
                              [32m"restore"[0m                                       [2m│[0m [2m"checkout" = "restore" [0m[2m→[0m [33mno[0m
                              [2m…[0m                                               [2m│[0m
                              [32m"clone"[0m[2m)[0m[2m)[0m                                       [2m│[0m [2m"checkout" = "clone" [0m[2m→[0m [33mno[0m
              [2m([0m[34mpositional[0m [32m"checkout"[0m                                          [2m│[0m [2m"checkout" = "checkout" [0m[2m→[0m [1;32myes[0m
                          [32m"--"[0m[2m)[0m                                               [2m│[0m [2m"checkout" = "--" [0m[2m→[0m [33mno[0m
              [2m…[0m[2m)[0m                                                              [2m│[0m
          [2m([0m[34mwhen[0m [2m([0mor                                                           [2m│[0m
                 [2m([0mhas                                                         [2m│[0m [33mno[0m
                  [2m[[0m[38;2;120;120;255m:claude-code/permission-mode[0m                               [2m│[0m
                   [32m"plan"[0m[2m][0m[2m)[0m                                                   [2m│[0m
                 [2m([0mhas [2m[[0m[38;2;120;120;255m:opencode/agent[0m                                        [2m│[0m [2m"plan" [0m[2m→[0m [1;32myes[0m
                       [32m"plan"[0m[2m][0m[2m)[0m[2m)[0m                                              [2m│[0m
            [2m([0m[34meffect[0m                                                           [2m│[0m [2m[0m[2m→[0m [1;33m:ask[0m [32m"git mutation requires approval in non-writing agents"[0m
             [38;2;120;120;255m:ask[0m [32m"git mutation requires approval in non-writing agents"[0m[2m)[0m[2m)[0m[2m)[0m[2m)[0m[2m)[0m [2m│[0m

[1mResult[0m

  [4;33mgit checkout -- main.ts[0m

  [2m→[0m [1;33m:ask[0m [32m"git mutation requires approval in non-writing agents"[0m

  config: <config-path>
