tests/snapshots/oracle_trace_v1__git_checkout_file_plan_stripped.snap
---
source: tests/oracle_trace_v1.rs
expression: normalised
---

Trace

  parser: gnu │

                                                               command │ git checkout -- main.ts
                                                                 facts │ :opencode/agent "plan"
  43: (rule (command "git")                                            │
        (context (and                                                  │
                  (positional "reset")                                 │ "checkout" = "reset" → no
                  …))                                                  │
        (ask "Dangerous git reset"))                                   │ → :ask "Dangerous git reset"
                                                                       │
  47: (rule (command "git")                                            │
        (context (or                                                   │
                  (positional "remote")                                │ "checkout" = "remote" → no
                  (positional                                          │
                   (or "clean" "gc"                                    │ "checkout" = "clean" → no
                       "push"))))                                      │ "checkout" = "push" → no
        (ask "Dangerous git operation"))                               │ → :ask "Dangerous git operation"
                                                                       │
  52: (rule (command "git")                                            │
        (context                                                       │
         (and                                                          │
          (or                                                          │
           (positional (or "switch"                                    │ "checkout" = "switch" → no
                           "restore"                                   │ "checkout" = "restore" → no
                           …                                           │
                           "clone"))                                   │ "checkout" = "clone" → no
           (positional "checkout" "--")                                │ "checkout" = "checkout" → yes
           …)                                                          │
          (plan-mode                                                   │ plan-mode → yes
           (or                                                         │
            (has                                                       │ no
             [:claude-code/permission-mode                             │
              "plan"])                                                 │
            (has                                                       │ "plan" → yes
             [:opencode/agent "plan"])))))                             │
        (effect                                                        │ → :ask "git mutation requires approval in non-writing agents"
         :ask "git mutation requires approval in non-writing agents")) │

Result

  git checkout -- main.ts

  → :ask "git mutation requires approval in non-writing agents"

  config: <config-path>
